# neural-network-based-text-compression

./: neural_network_based_text_compression.ipynb  pyproject.toml  text_compression.ipynb
lightning_logs/version_4/: events.out.tfevents.1705587388.Seran-sin-MacBook-Pro.local.55509.0
