[tool.poetry]
name = "neural-network-based-text-compression"
version = "0.1.0"
description = ""
authors = ["Seran Shanmugathas <seran@live.no>"]
readme = "README.md"
packages = [{include = "neural_network_based_text_compression"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
